# logsweeper

./: CMakeLists.txt  README.md  build.sh
example/: CMakeLists.txt  main.cpp
include/: logsweeper.h
log/: DrawWaveformTool.localhost.localdomain.showmaker.log.INFO.20250325-155052.9164  DrawWaveformTool.localhost.localdomain.showmaker.log.INFO.20250325-155154.9651  DrawWaveformTool.localhost.localdomain.showmaker.log.INFO.20250325-163533.10868  DrawWaveformTool.localhost.localdomain.showmaker.log.INFO.20250325-165451.11631  DrawWaveformTool.localhost.localdomain.showmaker.log.INFO.20250325-165618.11987  DrawWaveformTool.localhost.localdomain.showmaker.log.INFO.20250325-165850.12416  DrawWaveformTool.localhost.localdomain.showmaker.log.INFO.20250326-090400.29153  DrawWaveformTool.localhost.localdomain.showmaker.log.INFO.20250326-090425.29560  DrawWaveformTool.localhost.localdomain.showmaker.log.INFO.20250326-090446.29582  DrawWaveformTool.localhost.localdomain.showmaker.log.INFO.20250326-094419.30876  DrawWaveformTool.localhost.localdomain.showmaker.log.INFO.20250328-173257.11320  DrawWaveformTool.localhost.localdomain.showmaker.log.INFO.20250328-173515.12000  DrawWaveformTool.localhost.localdomain.showmaker.log.INFO.20250329-121605.13238  DrawWaveformTool.localhost.localdomain.showmaker.log.INFO.20250329-121608.13251  DrawWaveformTool.localhost.localdomain.showmaker.log.INFO.20250329-121610.13262  DrawWaveformTool.localhost.localdomain.showmaker.log.INFO.20250329-121612.13273  DrawWaveformTool.localhost.localdomain.showmaker.log.INFO.20250329-121614.13284  (+12 more)
(+2 files in other folders)
